# Langchain-DeepRead

./: README.md  pyproject.toml  settings.yaml
docs/: supervisord.md
langchain_deepread/: __init__.py  __main__.py  __version__.py  di.py  launcher.py  main.py
langchain_deepread/components/article_crawler/: __init__.py  article_crawler_component.py  exceptions.py
langchain_deepread/components/article_crawler/base/: __init__.py  base.py
langchain_deepread/components/article_crawler/bilibili/: __init__.py
langchain_deepread/components/article_crawler/jianshu/: __init__.py
langchain_deepread/components/article_crawler/juejin/: __init__.py  juejin_crawler.py
langchain_deepread/components/article_crawler/kr/: __init__.py
langchain_deepread/components/article_crawler/sspai/: __init__.py
langchain_deepread/components/article_crawler/tmt/: __init__.py
langchain_deepread/components/article_crawler/toutiao/: __init__.py
langchain_deepread/components/article_crawler/wx/: __init__.py
langchain_deepread/components/article_crawler/zhihu/: __init__.py
langchain_deepread/components/llm/: llm_component.py
langchain_deepread/server/summary/: summary_prompt.py  summary_router.py  summary_service.py
langchain_deepread/server/utils/: model.py
langchain_deepread/settings/: settings.py
tests/: deploy_test.sh  test.py
tools/supervisor/: supervisor.conf  web.conf
