[tool.poetry]
name = "langchain-deepread"
version = "0.1.0"
description = ""
authors = ["ptonlix <260431910@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.345"
openai = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
