[tool.poetry]
name = "langchain-deepread"
version = "0.1.0"
description = "DeepRead -> Daily Entropy reduction"
authors = ["ptonlix <baird0917@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.345"
openai = "^1.3.7"
injector = "^0.21.0"
fastapi = "^0.104.1"
langserve = "^0.0.32"
uvicorn = "^0.24.0.post1"
bs4 = "^0.0.1"
fake-useragent = "^1.4.0"
tiktoken = "^0.5.2"
parsel = "^1.8.1"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#设置poetry包管理工具的自定义pypi镜像源配置
[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"